SW-8892 Fixed: Modified search bar alignment

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
@@ -150,6 +150,13 @@
 
 }
 
+// if searchfield is active add content padding
+.is--active-searchfield {
+    .content-main {
+        padding-top: 55px;
+    }
+}
+
 // Loading indicator for css animations supported browsers
 .has--cssanimations {
     .form--ajax-loader {
